--- a/src/components/About/TechList/index.scss
+++ b/src/components/About/TechList/index.scss
@@ -1,4 +1,36 @@
-ul {
-    list-style: none;
-    padding: 0;
-  } 
+.tech-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  gap: 20px;
+}
+
+.tech-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #181818;
+  border: 1px solid #333;
+  border-radius: 12px;
+  padding-top: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 0 15px rgba(255, 255, 255, 0.5); 
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 150px; 
+  text-align: center;
+}
+
+.tech-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 0 20px rgba(255, 255, 255, 0.7); 
+}
+
+.tech-icon {
+  width: 60px; 
+  height: 60px;
+  margin-bottom: 15px;
+}
+
+.tech-name {
+  font-size: 14px;
+  color: #333;
+}
