--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -5,8 +5,6 @@
     background: linear-gradient(to bottom, #023e8a 20%, #00b4d8 80%);
 }
 
-
-
 .container { 
     width: 100%; 
     will-change: contents; 
@@ -21,6 +19,17 @@
     animation: fadeIn 1s forwards; 
     animation-delay: 1s; 
 }
+
+.container.about-page {
+    position: relative; 
+    margin-top: -50px;
+}
+
+.container.work-page {
+    position: relative; 
+    margin-top: -40px;
+}
+
 
 .container.work-page,
 .container.contact-page,
